# wavekit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_ZH.md  build.py  pyproject.toml
.github/workflows/: CI.yml  python-package.yml
.trellis/spec/backend/: directory-structure.md  error-handling.md
.trellis/tasks/06-12-consolidate-pattern-runtime-engine/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-04/00-bootstrap-guidelines/: prd.md  task.json
example/fifo_average_occupancy_level/: Makefile  fifo_average_occupancy_level.py  fifo_tb.vcd
example/fifo_latency/: Makefile  fifo.sv  fifo_tb.sv  fifo_tb.vcd  fifo_tb.vvp  latency.py
example/fifo_occupancy/: Makefile  fifo.sv  fifo_tb.sv  fifo_tb.vcd  fifo_tb.vvp  occupancy.py
example/scoreboard/: Makefile  fifo_tb.sv  fifo_tb.vcd  fifo_tb.vvp  verify.py
src/wavekit/: __init__.py  fsdb_reader.py  pattern_parser.py  reader.py  scope.py  signal.py  utils.py  vcd_reader.py  waveform.py
src/wavekit/pattern/: __init__.py  compiler.py  dsl.py  engine.py  errors.py  instance.py  program.py  result.py  runtime.py  steps.py  validation.py
src/wavekit/readers/: base.py  expr_parser.py  value_change.pyx
src/wavekit/readers/fsdb/: npi_fsdb.pxd  npi_fsdb_reader.pyx  reader.py
src/wavekit/readers/fst/: reader.py
src/wavekit/readers/vcd/: reader.py
tests/: helpers.py  test_examples.py  test_fstreader.py  test_pattern.py  test_pattern_program.py  test_readme_examples.py  test_vcdreader.py  test_waveform.py
tests/pattern/: test_declarative_api.py  test_programmable_api.py  test_runtime_semantics.py
tests/testdata/: Makefile  unknown_states.fst  unknown_states.v  unknown_states.vcd
