[tool.poetry]
name = "wavekit"
version = "0.1.1"
description = "a fundamental package for digital circuit waveform analysis"
authors = ["cxzzzz <cxz19961010@outlook.com>"]
readme = "README.md"
repository = "https://github.com/cxzzzz/wavekit"
build = "build.py"
include = ["src/wavekit/*.so"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
vcdvcd = "^2.3.5"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core", "Cython", "setuptools", "wheel", "numpy>=2.0.0"]
build-backend = "poetry.core.masonry.api"
